added new changes in design application

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -13,10 +13,6 @@
 </head>
 
 <body>
-  <!-- Animated Background -->
-  <div class="lm-animated-bg"></div>
-  <!-- /Animated Background -->
-
   <!-- Loading animation -->
   <div class="preloader">
     <div class="preloader-animation">
@@ -32,7 +28,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="header-photo">
-            <img src="@img/main_photo.jpg" alt="Alex Smith">
+            <img src="@img/avatar/main_photo.jpg" alt="Alex Smith">
           </div>
           <div class="header-titles">
             <h2>Alex Smith</h2>
