--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,17 +2,20 @@
 <html lang="en" class="no-js">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Valerij Shumkov | Web-site</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta name="author" content="Valerij Shumkov" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="Valerij Shumkov">
   <link rel="shortcut icon" href="@img/favicon.ico">
 </head>
 
 <body>
+  <h1 class="visually-hidden">
+    Web-site Portfolio Valerij Shumkov
+  </h1>
   <!-- Loading animation -->
   <div class="preloader">
     <div class="preloader-animation">
@@ -834,7 +837,7 @@
 
                       <figure class="item lbaudio" data-groups='["category_all", "category_soundcloud"]'>
                         <div class="portfolio-item-img">
-                          <img src="@img/portfolio/1.jpg" alt="SoundCloud Audio" title="" />
+                          <img src="@img/portfolio/1.jpg" alt="SoundCloud Audio" title="">
                           <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/221650664&#038;color=%23ff5500&#038;auto_play=false&#038;hide_related=false&#038;show_comments=true&#038;show_user=true&#038;show_reposts=false&#038;show_teaser=true&#038;visual=true"
                             class="lightbox mfp-iframe" title="SoundCloud Audio"></a>
                         </div>
@@ -846,7 +849,7 @@
 
                       <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                         <div class="portfolio-item-img">
-                          <img src="@img/portfolio/2.jpg" alt="Media Project 2" title="" />
+                          <img src="@img/portfolio/2.jpg" alt="Media Project 2" title="">
                           <a href="portfolio-1.html" class="ajax-page-load"></a>
                         </div>
 
@@ -857,7 +860,7 @@
 
                       <figure class="item lbvideo" data-groups='["category_all", "category_vimeo-videos"]'>
                         <div class="portfolio-item-img">
-                          <img src="@img/portfolio/3.jpg" alt="Vimeo Video 1" title="" />
+                          <img src="@img/portfolio/3.jpg" alt="Vimeo Video 1" title="">
                           <a href="https://player.vimeo.com/video/158284739" class="lightbox mfp-iframe"
                             title="Vimeo Video 1"></a>
                         </div>
@@ -869,7 +872,7 @@
 
                       <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                         <div class="portfolio-item-img">
-                          <img src="@img/portfolio/4.jpg" alt="Media Project 1" title="" />
+                          <img src="@img/portfolio/4.jpg" alt="Media Project 1" title="">
                           <a href="portfolio-1.html" class="ajax-page-load"></a>
                         </div>
 
@@ -880,7 +883,7 @@
 
                       <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
                         <div class="portfolio-item-img">
-                          <img src="@img/portfolio/5.jpg" alt="Mockup Design 1" title="" />
+                          <img src="@img/portfolio/5.jpg" alt="Mockup Design 1" title="">
                           <a class="lightbox" title="Mockup Design 1" href="img/portfolio/full/5.jpg"></a>
                         </div>
 
@@ -891,7 +894,7 @@
 
                       <figure class="item lbvideo" data-groups='["category_all", "category_youtube-videos"]'>
                         <div class="portfolio-item-img">
-                          <img src="@img/portfolio/6.jpg" alt="YouTube Video 1" title="" />
+                          <img src="@img/portfolio/6.jpg" alt="YouTube Video 1" title="">
                           <a href="https://www.youtube.com/embed/bg0gv2YpIok" class="lightbox mfp-iframe"
                             title="YouTube Video 1"></a>
                         </div>
@@ -929,7 +932,7 @@
                           </div>
                           <a href="blog-post-1.html">
                             <img src="@img/blog/blog_post_1.jpg" class="size-blog-masonry-image-two-c"
-                              alt="Why I Switched to Sketch For UI Design" title="" />
+                              alt="Why I Switched to Sketch For UI Design" title="">
                             <div class="mask"></div>
                           </a>
                         </div>
@@ -952,7 +955,7 @@
                           </div>
                           <a href="blog-post-1.html">
                             <img src="@img/blog/blog_post_2.jpg" class="size-blog-masonry-image-two-c"
-                              alt="Best Practices for Animated Progress Indicators" title="" />
+                              alt="Best Practices for Animated Progress Indicators" title="">
                             <div class="mask"></div>
                           </a>
                         </div>
@@ -975,7 +978,7 @@
                           </div>
                           <a href="blog-post-1.html">
                             <img src="@img/blog/blog_post_3.jpg" class="size-blog-masonry-image-two-c"
-                              alt="Designing the Perfect Feature Comparison Table" title="" />
+                              alt="Designing the Perfect Feature Comparison Table" title="">
                             <div class="mask"></div>
                           </a>
                         </div>
@@ -998,7 +1001,7 @@
                           </div>
                           <a href="blog-post-1.html">
                             <img src="@img/blog/blog_post_4.jpg" class="size-blog-masonry-image-two-c"
-                              alt="An Overview of E-Commerce Platforms" title="" />
+                              alt="An Overview of E-Commerce Platforms" title="">
                             <div class="mask"></div>
                           </a>
                         </div>
