--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -182,3 +182,8 @@ input[type="submit"]:focus {
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
+}
