update main photo and title

--- a/src/views/layout/header.hbs
+++ b/src/views/layout/header.hbs
@@ -1,10 +1,10 @@
 <header id="site_header" class="header mobile-menu-hide">
   <div class="header-content">
     <div class="header-photo">
-      <img src="@img/avatar/main_photo.jpg" alt="Alex Smith">
+      <img src="@img/avatar/photo-portfolio.png" alt="Valerij Shumkov">
     </div>
     <div class="header-titles">
-      <h2>Alex Smith</h2>
+      <h2>Valerij Shumkov</h2>
       <h4>Web Designer</h4>
     </div>
   </div>
