--- a/src/views/partials/about.hbs
+++ b/src/views/partials/about.hbs
@@ -113,7 +113,7 @@
           <!-- Testimonial 1 -->
           <div class="testimonial">
             <div class="img">
-              <img src="@img/testimonials/testimonial-1.jpg" alt="Alex Smith">
+              <img src="@img/testimonials/testimonial-1.jpg" alt="Valerij Shumkov">
             </div>
             <div class="text">
               <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc
@@ -130,7 +130,7 @@
           </div>
           <div class="testimonial">
             <div class="img">
-              <img src="@img/testimonials/testimonial-2.jpg" alt="Alex Smith">
+              <img src="@img/testimonials/testimonial-2.jpg" alt="Valerij Shumkov">
             </div>
             <div class="text">
               <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc
@@ -147,7 +147,7 @@
           </div>
           <div class="testimonial">
             <div class="img">
-              <img src="@img/testimonials/testimonial-3.jpg" alt="Alex Smith">
+              <img src="@img/testimonials/testimonial-3.jpg" alt="Valerij Shumkov">
             </div>
             <div class="text">
               <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc
