--- a/src/pages/portfolio/portfolio-3.hbs
+++ b/src/pages/portfolio/portfolio-3.hbs
@@ -50,7 +50,7 @@
           </div>
           <ul class="project-general-info">
             <li>
-              <p><i class="fa fa-user"></i> Alex Smith</p>
+              <p><i class="fa fa-user"></i> Valerij Shumkov</p>
             </li>
             <li>
               <p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
