--- a/src/views/layout/header.hbs
+++ b/src/views/layout/header.hbs
@@ -56,5 +56,5 @@
   <div class="header-buttons">
     <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
   </div>
-  <div class="copyrights">© 2020 All rights reserved.</div>
+  <div class="copyrights">© 2022 Valerij Shumkov Development.</div>
 </header>
