--- a/src/views/partials/blog.hbs
+++ b/src/views/partials/blog.hbs
@@ -12,7 +12,7 @@
                 <div class="category">
                   <a href="#" title="View all posts in Design">Design</a>
                 </div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <img src="@img/blog/blog_post_1.jpg" class="size-blog-masonry-image-two-c"
                     alt="Why I Switched to Sketch For UI Design" title="">
                   <div class="mask"></div>
@@ -20,7 +20,7 @@
               </div>
               <div class="post-info">
                 <div class="post-date">05 Mar 2020</div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <h4 class="blog-item-title">Why I Switched to Sketch For UI Design</h4>
                 </a>
               </div>
@@ -32,7 +32,7 @@
                 <div class="category">
                   <a href="#" title="View all posts in UI">UI</a>
                 </div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <img src="@img/blog/blog_post_2.jpg" class="size-blog-masonry-image-two-c"
                     alt="Best Practices for Animated Progress Indicators" title="">
                   <div class="mask"></div>
@@ -40,7 +40,7 @@
               </div>
               <div class="post-info">
                 <div class="post-date">23 Feb 2020</div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <h4 class="blog-item-title">Best Practices for Animated Progress Indicators</h4>
                 </a>
               </div>
@@ -52,7 +52,7 @@
                 <div class="category">
                   <a href="#" title="View all posts in Design">Design</a>
                 </div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <img src="@img/blog/blog_post_3.jpg" class="size-blog-masonry-image-two-c"
                     alt="Designing the Perfect Feature Comparison Table" title="">
                   <div class="mask"></div>
@@ -60,7 +60,7 @@
               </div>
               <div class="post-info">
                 <div class="post-date">06 Feb 2020</div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <h4 class="blog-item-title">Designing the Perfect Feature Comparison Table</h4>
                 </a>
               </div>
@@ -72,7 +72,7 @@
                 <div class="category">
                   <a href="#" title="View all posts in E-Commerce">UI</a>
                 </div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <img src="@img/blog/blog_post_4.jpg" class="size-blog-masonry-image-two-c"
                     alt="An Overview of E-Commerce Platforms" title="">
                   <div class="mask"></div>
@@ -80,7 +80,7 @@
               </div>
               <div class="post-info">
                 <div class="post-date">07 Jan 2020</div>
-                <a href="blog-post-1.html">
+                <a href="blog-1.html">
                   <h4 class="blog-item-title">An Overview of E-Commerce Platforms</h4>
                 </a>
               </div>
