--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -1,4 +1,7 @@
 <section data-id="home" class="animated-section start-page">
+  <svg class="main-logo">
+    <use xlink:href="svg/spritemap.svg#sprite-icon"></use>
+  </svg>
   <div class="section-content vcentered">
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
