--- a/src/views/layout/header.hbs
+++ b/src/views/layout/header.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="header-titles">
       <h2>Valerij Shumkov</h2>
-      <h4>Web Designer</h4>
+      <h4>Frontend-developer</h4>
     </div>
   </div>
   <ul class="main-menu">
@@ -54,7 +54,7 @@
     </ul>
   </div>
   <div class="header-buttons">
-    <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
+    <a href="#" target="_blank" class="btn btn-primary">Show Trailer</a>
   </div>
   <div class="copyrights">© 2022 Valerij Shumkov Development.</div>
 </header>
