--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -9,11 +9,13 @@
           <h2>Valerij Shumkov</h2>
           <div class="owl-carousel text-rotation">
             <div class="item">
-              <div class="sp-subtitle">Web Designer</div>
-            </div>
-
-            <div class="item">
               <div class="sp-subtitle">Frontend-developer</div>
+            </div>
+            <div class="item">
+              <div class="sp-subtitle">Web-programmer</div>
+            </div>
+            <div class="item">
+              <div class="sp-subtitle">Web-master</div>
             </div>
           </div>
         </div>
