fxd padding size

--- a/src/pages/blog/blog-1.hbs
+++ b/src/pages/blog/blog-1.hbs
@@ -15,7 +15,7 @@
 <body>
   {{>../../views/templates/caption caption="Blog Valerij Shumkov"}}
   {{>../../views/templates/preloader}}
-  {{>../../views/layout/page}}
+  {{>../../views/layout/blog-page}}
 
   <script src="vendors/jquery.min.js"></script>
   <script src="vendors/modernizr.custom.js"></script>
