--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -68,7 +68,7 @@
             <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
               <div class="portfolio-item-img">
                 <img src="@img/portfolio/5.jpg" alt="Mockup Design 1" title="">
-                <a class="lightbox" title="Mockup Design 1" href="img/portfolio/full/5.jpg"></a>
+                <a class="lightbox" title="Mockup Design 1" href="@img/portfolio/5.jpg"></a>
               </div>
               <i class="far fa-image"></i>
               <h4 class="name">Mockup Design 1</h4>
