--- a/src/pages/blog/blog-1.hbs
+++ b/src/pages/blog/blog-1.hbs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" class="no-js">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Valerij Shumkov | Blog</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="Valerij Shumkov">
-  <link rel="shortcut icon" href="@img/favicon.ico">
-</head>
+{{>../../views/layout/head
+lng="en"
+title="Valerij Shumkov | Blog"
+description=""
+keywords=""
+author="Valerij Shumkov"
+}}
 
 <body>
   {{>../../views/templates/caption caption="Blog Valerij Shumkov"}}
