added social links

--- a/src/views/layout/header.hbs
+++ b/src/views/layout/header.hbs
@@ -47,11 +47,7 @@
     </li>
   </ul>
   <div class="social-links">
-    <ul>
-      <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-      <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    </ul>
+    {{>../templates/social}}
   </div>
   <div class="header-buttons">
     <a href="#" target="_blank" class="btn btn-primary">Show Trailer</a>
