--- a/src/pages/portfolio/portfolio-2.hbs
+++ b/src/pages/portfolio/portfolio-2.hbs
@@ -77,9 +77,7 @@
             <div class="block-title">
               <h3>Share</h3>
             </div>
-            <a href="#" target="_blank" class="btn"><i class="fab fa-facebook-f"></i> </a>
-            <a href="#" target="_blank" class="btn"><i class="fab fa-twitter"></i> </a>
-            <a href="#" target="_blank" class="btn"><i class="fab fa-dribbble"></i> </a>
+            {{>../../views/templates/social-link}}
           </div>
         </div>
       </div>
