--- a/src/views/partials/about.hbs
+++ b/src/views/partials/about.hbs
@@ -5,33 +5,39 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-7">
-        <p>Proin volutpat mauris ac pellentesque pharetra. Suspendisse congue elit vel odio suscipit, sit amet
-          tempor nisl imperdiet. Quisque ex justo, faucibus ut mi in, condimentum finibus dolor. Aliquam vitae
-          hendrerit dolor, eget imperdiet mauris. Maecenas et ante id ipsum condimentum dictum et vel massa.
-          Ut in imperdiet dolor, vel consectetur dui.</p>
+        <p>
+          I am <strong>Valerij Shumkov Middle Front-end Developer</strong>, Web-programmer, with more
+          than <b>5</b> years of experience.
+          Education Donetsk National University specialty applied computer science.
+        </p>
+        <p>
+          At the age of 18, first came in touch with programming interface and app development.
+          Now I am developing multifunctional <b>web applications</b> and sites, <b>3D modeling</b>, cross-platform
+          <strong>web games</strong>, landing pages and online stores, <b>web services</b>, CMS and much more.
+        </p>
       </div>
       <div class="col-xs-12 col-sm-5">
         <div class="info-list">
           <ul>
             <li>
               <span class="title">Age</span>
-              <span class="value">32</span>
+              <span class="value">22</span>
             </li>
             <li>
               <span class="title">Residence</span>
-              <span class="value">USA</span>
+              <span class="value">Ukraine, Russia</span>
             </li>
             <li>
               <span class="title">Address</span>
-              <span class="value">88 Some Street, Some Town</span>
+              <span class="value">Samara</span>
             </li>
             <li>
               <span class="title">e-mail</span>
-              <span class="value">email@example.com</span>
+              <span class="value">valery.shumkov@mail.ru</span>
             </li>
             <li>
               <span class="title">Phone</span>
-              <span class="value">+0123 123 456 789</span>
+              <span class="value">+7(961)-305-13-20</span>
             </li>
           </ul>
         </div>
@@ -54,19 +60,19 @@
                 <i class="lnr lnr-store"></i>
               </div>
               <div class="ci-text">
-                <h4>Ecommerce</h4>
-                <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit
-                  amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                <h4>Web-development</h4>
+                <p>Development of web applications, game mechanics, landing pages, multi-pages, online stores, email
+                  development, CMS systems.</p>
               </div>
             </div>
             <div class="info-block-w-icon">
               <div class="ci-icon">
-                <i class="lnr lnr-laptop-phone"></i>
+                <i class="lnr lnr-select"></i>
               </div>
               <div class="ci-text">
-                <h4>Web Design</h4>
-                <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit
-                  amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                <h4>SEO</h4>
+                <p>SEO website promotion in search engines and optimization. Development of valid semantic layout for
+                  successful promotion in search engines</p>
               </div>
             </div>
           </div>
@@ -77,12 +83,12 @@
           <div class="info-list-w-icon">
             <div class="info-block-w-icon">
               <div class="ci-icon">
-                <i class="lnr lnr-pencil"></i>
+                <i class="lnr lnr-laptop-phone"></i>
               </div>
               <div class="ci-text">
-                <h4>Copywriting</h4>
-                <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit
-                  amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                <h4>Web Design</h4>
+                <p>Development of a unique design in popular applications for cross-adaptation, design of 3D models,
+                  development of an interface of any complexity.</p>
               </div>
             </div>
             <div class="info-block-w-icon">
@@ -91,8 +97,8 @@
               </div>
               <div class="ci-text">
                 <h4>Management</h4>
-                <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit
-                  amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                <p>Web project management is the key to successfully moving a business forward, the right decisions at
+                  the foundation of development will provide a huge competitive advantage.</p>
               </div>
             </div>
           </div>
@@ -218,56 +224,6 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="block-title">
-          <h3>Pricing</h3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class=" col-xs-12 col-sm-12 ">
-        <div class="fw-pricing clearfix row">
-          <div class="fw-package-wrap col-md-6 ">
-            <div class="fw-package">
-              <div class="fw-heading-row">
-                <span>Silver</span>
-              </div>
-              <div class="fw-pricing-row">
-                <span>$64</span>
-                <small>per month</small>
-              </div>
-              <div class="fw-button-row">
-                <a href="#" target="_self" class="btn btn-secondary">Free Trial</a>
-              </div>
-              <div class="fw-default-row">Lorem ipsum dolor</div>
-              <div class="fw-default-row">Pellentesque scelerisque</div>
-              <div class="fw-default-row">Morbi eu sagittis</div>
-            </div>
-          </div>
-          <div class="fw-package-wrap col-md-6 highlight-col ">
-            <div class="fw-package">
-              <div class="fw-heading-row">
-                <span>Gold</span>
-              </div>
-              <div class="fw-pricing-row">
-                <span>$128</span>
-                <small>per month</small>
-              </div>
-              <div class="fw-button-row">
-                <a href="#" target="_self" class="btn btn-primary">Free Trial</a>
-              </div>
-              <div class="fw-default-row">Lorem ipsum dolor</div>
-              <div class="fw-default-row">Pellentesque scelerisque</div>
-              <div class="fw-default-row">Morbi eu sagittis</div>
-              <div class="fw-default-row">Donec non diam</div>
-              <div class="fw-default-row"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="white-space-50"></div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <div class="block-title">
           <h3>Fun <span>Facts</span></h3>
         </div>
       </div>
@@ -276,8 +232,8 @@
       <div class="col-xs-12 col-sm-4">
         <div class="fun-fact gray-default">
           <i class="lnr lnr-heart"></i>
-          <h4>Happy Clients</h4>
-          <span class="fun-fact-block-value">578</span>
+          <h4>Projects</h4>
+          <span class="fun-fact-block-value">&gt;200</span>
           <span class="fun-fact-block-text"></span>
         </div>
       </div>
@@ -285,15 +241,15 @@
         <div class="fun-fact gray-default">
           <i class="lnr lnr-clock"></i>
           <h4>Working Hours</h4>
-          <span class="fun-fact-block-value">4,780</span>
+          <span class="fun-fact-block-value">&gt;70,080</span>
           <span class="fun-fact-block-text"></span>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4 ">
         <div class="fun-fact gray-default">
           <i class="lnr lnr-star"></i>
-          <h4>Awards Won</h4>
-          <span class="fun-fact-block-value">15</span>
+          <h4>Won IQOS Tender</h4>
+          <span class="fun-fact-block-value">10</span>
           <span class="fun-fact-block-text"></span>
         </div>
       </div>
