finished about page

--- a/src/styles/partials/_clients.scss
+++ b/src/styles/partials/_clients.scss
@@ -1,13 +1,16 @@
-.clients.owl-carousel .client-block {
-  padding: 15px;
-  margin-bottom: 15px;
+.clients {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .client-block {
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 120px;
   text-align: center;
-  padding: 5px 0;
-  margin-bottom: 30px;
-  opacity: .7;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
