--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -195,3 +195,15 @@ input[type="submit"]:focus {
   position: fixed;
   transform: scale(0);
 }
+
+.bg-light {
+  background-color: #ffffff;
+}
+
+.pl-0 {
+  padding-left: 0;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
