--- a/src/views/partials/about.hbs
+++ b/src/views/partials/about.hbs
@@ -105,72 +105,6 @@
         </div>
       </div>
     </div>
-    <div class="white-space-30"></div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <div class="block-title">
-          <h3>Testimonials</h3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <div class="testimonials owl-carousel">
-          <!-- Testimonial 1 -->
-          <div class="testimonial">
-            <div class="img">
-              <img src="@img/testimonials/testimonial-1.jpg" alt="Valerij Shumkov">
-            </div>
-            <div class="text">
-              <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc
-                sit amet urna tempus finibus. Duis mollis leo id ligula pellentesque, at vehicula dui
-                ultrices.</p>
-            </div>
-            <div class="author-info">
-              <h4 class="author">Julia Hickman</h4>
-              <h5 class="company">Omni Source</h5>
-              <div class="icon">
-                <i class="fas fa-quote-right"></i>
-              </div>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="img">
-              <img src="@img/testimonials/testimonial-2.jpg" alt="Valerij Shumkov">
-            </div>
-            <div class="text">
-              <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc
-                sit amet urna tempus finibus. Duis mollis leo id ligula pellentesque, at vehicula dui
-                ultrices.</p>
-            </div>
-            <div class="author-info">
-              <h4 class="author">Robert Watkins</h4>
-              <h5 class="company">Endicott Shoes</h5>
-              <div class="icon">
-                <i class="fas fa-quote-right"></i>
-              </div>
-            </div>
-          </div>
-          <div class="testimonial">
-            <div class="img">
-              <img src="@img/testimonials/testimonial-3.jpg" alt="Valerij Shumkov">
-            </div>
-            <div class="text">
-              <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc
-                sit amet urna tempus finibus. Duis mollis leo id ligula pellentesque, at vehicula dui
-                ultrices.</p>
-            </div>
-            <div class="author-info">
-              <h4 class="author">Kristin Carroll</h4>
-              <h5 class="company">Helping Hand</h5>
-              <div class="icon">
-                <i class="fas fa-quote-right"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="white-space-50"></div>
     <div class="row">
       <div class="col-xs-12 col-sm-12">
@@ -179,42 +113,67 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row bg-light">
       <div class="col-xs-12 col-sm-12">
         <div class="clients owl-carousel">
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-1.png" alt="Logo">
+              <img src="@img/branding/iqos.png" alt="IQOS">
             </a>
           </div>
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-2.png" alt="Logo">
+              <img src="@img/branding/pg.png" alt="PG">
             </a>
           </div>
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-3.png" alt="Logo">
+              <img src="@img/branding/yandex.png" alt="Yandex">
             </a>
           </div>
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-4.png" alt="Logo">
+              <img src="@img/branding/samolet.svg" alt="Samolet">
             </a>
           </div>
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-5.png" alt="Logo">
+              <img src="@img/branding/azbuka.png" alt="Azbuka">
             </a>
           </div>
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-6.png" alt="Logo">
+              <img src="@img/branding/avtoraketa.svg" alt="Avtoraketa">
             </a>
           </div>
           <div class="client-block">
             <a href="#" target="_blank" title="Logo">
-              <img src="@img/clients/client-7.png" alt="Logo">
+              <img src="@img/branding/alfa.png" alt="Alfa">
+            </a>
+          </div>
+          <div class="client-block">
+            <a href="#" target="_blank" title="Logo">
+              <img src="@img/branding/j&j.png" alt="j&j">
+            </a>
+          </div>
+          <div class="client-block">
+            <a href="#" target="_blank" title="Logo">
+              <img src="@img/branding/bloom.png" alt="Bloom">
+            </a>
+          </div>
+          <div class="client-block">
+            <a href="#" target="_blank" title="Logo">
+              <img src="@img/branding/letual.png" alt="Letual">
+            </a>
+          </div>
+          <div class="client-block">
+            <a href="#" target="_blank" title="Logo">
+              <img src="@img/branding/mvideo.png" alt="Mvideo">
+            </a>
+          </div>
+          <div class="client-block">
+            <a href="#" target="_blank" title="Logo">
+              <img src="@img/branding/perik.png" alt="Perik">
             </a>
           </div>
         </div>
