--- a/src/styles/partials/_certificates.scss
+++ b/src/styles/partials/_certificates.scss
@@ -3,6 +3,7 @@
   display: table;
   table-layout: fixed;
   width: 100%;
+  min-height: 120px;
   border: 2px solid #444;
   border-radius: 8px;
   margin-bottom: 20px;
@@ -17,8 +18,8 @@
   display: table-cell;
   width: 120px;
   height: 100%;
-  background-color: #444;
-  padding: 25px;
+  background-color: #fff;
+  padding: 7px;
   vertical-align: middle;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
