--- a/src/views/partials/resume.hbs
+++ b/src/views/partials/resume.hbs
@@ -11,26 +11,25 @@
         <div class="timeline timeline-second-style clearfix">
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2008</h5>
-              <span class="item-company">University of Studies</span>
+              <h5 class="item-period">2018</h5>
+              <span class="item-company">School of Music</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Frontend Development</h4>
-              <p>Maecenas finibus nec sem ut imperdiet. Ut tincidunt est ac dolor aliquam sodales. Phasellus
-                sed mauris hendrerit, laoreet sem in, lobortis ante.</p>
+              <h4 class="item-title">Pianist, violinist, guitarist, flute player</h4>
+              <p>The musical school number one in the city of Donetsk.</p>
             </div>
           </div>
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2007</h5>
-              <span class="item-company">University of Studies</span>
+              <h5 class="item-period">2022</h5>
+              <span class="item-company">University</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Graphic Design</h4>
-              <p>Aliquam tincidunt malesuada tortor vitae iaculis. In eu turpis iaculis, feugiat risus quis,
-                aliquet urna. Quisque fringilla mollis risus, eu pulvinar dolor.</p>
+              <h4 class="item-title">Applied Computer Science</h4>
+              <p>Donetsk National University at the Faculty of Economic Cybernetics,
+                specialty Applied Informatics, Business Informatics.</p>
             </div>
           </div>
         </div>
@@ -41,120 +40,45 @@
         <div class="timeline timeline-second-style clearfix">
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2016 - Current</h5>
-              <span class="item-company">Google</span>
+              <h5 class="item-period">2021 - Current</h5>
+              <span class="item-company">WIM</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Lead Ui/Ux Designer</h4>
-              <p>Praesent dignissim sollicitudin justo, sed elementum quam lacinia quis. Phasellus eleifend
-                tristique posuere. Sed vitae dui nec magna.</p>
+              <h4 class="item-title">Middle / Front-end / Developer</h4>
+              <p>
+                Development of websites, services of varying complexity and layout of email letters on projects:
+                Yandex.Market,
+                Johnson&Johnson, Perekrestok, SAMOLET, Alfa Insurance, VTB Bank, IQOS and others.
+              </p>
             </div>
           </div>
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2013 - 2016</h5>
-              <span class="item-company">Adobe</span>
+              <h5 class="item-period">2021 - 2022</h5>
+              <span class="item-company">ROSTJOB</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Senior Ui/Ux Designer</h4>
-              <p>Maecenas tempus faucibus rutrum. Duis eu aliquam urna. Proin vitae nulla tristique, ornare
-                felis id, congue libero. Nam volutpat euismod quam.</p>
+              <h4 class="item-title">Junior / Front-end / Developer / Ruby</h4>
+              <p>Development and support of a large application on the Ruby on Rails framework for job search,
+                development of a chat bot in native JS.</p>
             </div>
           </div>
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2011 - 2013</h5>
-              <span class="item-company">Google</span>
+              <h5 class="item-period">2018 - 2021</h5>
+              <span class="item-company">Craft Group</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Junior Ui/Ux Designer</h4>
-              <p>Duis mollis nunc quis quam viverra venenatis. Nulla nulla arcu, congue vitae nunc ac, sodales
-                ultricies diam. Nullam justo leo, tincidunt sit amet.</p>
+              <h4 class="item-title">Junior / Front-end / Developer / Coder</h4>
+              <p>Development of corporate sites, multi-leudings, multi-page sites, online stores, development of web
+                applications, large job search projects.</p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-5">
-        <!-- Design Skills -->
-        <div class="block-title">
-          <h3>Design <span>Skills</span></h3>
-        </div>
-        <div class="skills-info skills-second-style">
-          <!-- Skill 1 -->
-          <div class="skill clearfix">
-            <h4>Web Design</h4>
-            <div class="skill-value">95%</div>
-          </div>
-          <div class="skill-container skill-1">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>Print Design</h4>
-            <div class="skill-value">65%</div>
-          </div>
-          <div class="skill-container skill-2">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>Logo Design</h4>
-            <div class="skill-value">80%</div>
-          </div>
-          <div class="skill-container skill-3">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>Graphic Design</h4>
-            <div class="skill-value">90%</div>
-          </div>
-          <div class="skill-container skill-4">
-            <div class="skill-percentage"></div>
-          </div>
-        </div>
-        <div class="white-space-10"></div>
-        <div class="block-title">
-          <h3>Coding <span>Skills</span></h3>
-        </div>
-        <div class="skills-info skills-second-style">
-          <div class="skill clearfix">
-            <h4>JavaScript</h4>
-            <div class="skill-value">95%</div>
-          </div>
-          <div class="skill-container skill-5">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>PHP</h4>
-            <div class="skill-value">85%</div>
-          </div>
-          <div class="skill-container skill-6">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>HTML/CSS</h4>
-            <div class="skill-value">100%</div>
-          </div>
-          <div class="skill-container skill-7">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>Smarty/Twig</h4>
-            <div class="skill-value">75%</div>
-          </div>
-          <div class="skill-container skill-8">
-            <div class="skill-percentage"></div>
-          </div>
-          <div class="skill clearfix">
-            <h4>Perl</h4>
-            <div class="skill-value">90%</div>
-          </div>
-          <div class="skill-container skill-9">
-            <div class="skill-percentage"></div>
-          </div>
-        </div>
-        <div class="white-space-10"></div>
+        <div class="white-space-50"></div>
         <div class="block-title">
           <h3>Knowledges</h3>
         </div>
@@ -167,15 +91,222 @@
           <li>Communication</li>
           <li>Problem-Solving</li>
           <li>Social Networking</li>
-          <li>Flexibility</li>
+          <li>Web Game Development</li>
+          <li>Application</li>
+          <li>CRM Marketing</li>
+          <li>Landings</li>
+          <li>CMS System</li>
+          <li>Internet Shop</li>
+          <li>Multilandings</li>
+          <li>CMS System</li>
+          <li>Mechanics</li>
+          <li>Quizes</li>
+          <li>Web Services</li>
+          <li>SEO</li>
+          <li>Tools</li>
+          <li>SMM</li>
+          <li>Responsive / Design</li>
+          <li>Сross-Platform Development</li>
+          <li>Server Side Rendering</li>
+          <li>Single Page Application</li>
+          <li>Progressive Page Application</li>
+          <li>Video editing</li>
+          <li>Advertising</li>
+          <li>Valid layout</li>
+          <li>Testing</li>
+          <li>IDE</li>
         </ul>
+        <div class="white-space-10"></div>
+      </div>
+      <div class="col-xs-12 col-sm-5">
+        <!-- Design Skills -->
+        <div class="block-title">
+          <h3>Design <span>Skills</span></h3>
+        </div>
+        <div class="skills-info skills-second-style">
+          <!-- Skill 1 -->
+          <div class="skill clearfix">
+            <h4>Figma</h4>
+            <div class="skill-value">95%</div>
+          </div>
+          <div class="skill-container skill-1">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Sketch</h4>
+            <div class="skill-value">65%</div>
+          </div>
+          <div class="skill-container skill-2">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Photoshop</h4>
+            <div class="skill-value">80%</div>
+          </div>
+          <div class="skill-container skill-3">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Adobe</h4>
+            <div class="skill-value">90%</div>
+          </div>
+          <div class="skill-container skill-4">
+            <div class="skill-percentage"></div>
+          </div>
+        </div>
+        <div class="white-space-10"></div>
+        <div class="block-title">
+          <h3>Coding <span>Skills</span></h3>
+        </div>
+        <div class="skills-info skills-second-style">
+          <div class="skill clearfix">
+            <h4>HTML / CSS / JS / jQuery</h4>
+            <div class="skill-value">93%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Pug / Slim / Handlebars</h4>
+            <div class="skill-value">95%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Scss / Sass / Less</h4>
+            <div class="skill-value">96%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Gulp, Webpack, Grunt</h4>
+            <div class="skill-value">90%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Bootstrap, Materialize.css</h4>
+            <div class="skill-value">80%</div>
+          </div>
+          <div class="skill-container skill-3">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Vue (Nuxt.js), React</h4>
+            <div class="skill-value">95%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>SPA / SSR / PWA</h4>
+            <div class="skill-value">95%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>WordPress, Ghost, Strapi, Joomla</h4>
+            <div class="skill-value">75%</div>
+          </div>
+          <div class="skill-container skill-8">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Bootstrap, Materialize.css</h4>
+            <div class="skill-value">88%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Three.js, Blender.js</h4>
+            <div class="skill-value">93%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Phaser.js, Three.js</h4>
+            <div class="skill-value">91%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>PHP / SQL / Ruby / Python / Visual Basic / Pascal</h4>
+            <div class="skill-value">65%</div>
+          </div>
+          <div class="skill-container skill-2">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Ruby on Rails, Yii, Laravel</h4>
+            <div class="skill-value">58%</div>
+          </div>
+          <div class="skill-container skill-2">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>MySQL, NoSQL</h4>
+            <div class="skill-value">89%</div>
+          </div>
+          <div class="skill-container skill-6">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Docker</h4>
+            <div class="skill-value">66%</div>
+          </div>
+          <div class="skill-container skill-8">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>GIT / GitHub / GitLab / Bitbucket</h4>
+            <div class="skill-value">91%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>SEO, SMM</h4>
+            <div class="skill-value">85%</div>
+          </div>
+          <div class="skill-container skill-6">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Jest Test</h4>
+            <div class="skill-value">85%</div>
+          </div>
+          <div class="skill-container skill-6">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>Cisco</h4>
+            <div class="skill-value">98%</div>
+          </div>
+          <div class="skill-container skill-9">
+            <div class="skill-percentage"></div>
+          </div>
+          <div class="skill clearfix">
+            <h4>BPwin / ERwin Data Modeler / ARIS Express</h4>
+            <div class="skill-value">80%</div>
+          </div>
+          <div class="skill-container skill-6">
+            <div class="skill-percentage"></div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="white-space-50"></div>
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="block-title">
-          <h3>Certificates</h3>
+          <h3>Mainstream Projects</h3>
         </div>
       </div>
     </div>
@@ -183,20 +314,14 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/clients/client-1.png" alt="logo">
+            <img src="@img/branding/iqos.png" alt="IQOS">
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Psyhology of Intertnation Design</h4>
+              <h4>IQOS</h4>
             </div>
             <div class="certi-id">
-              <span>Membership ID: XXXX</span>
-            </div>
-            <div class="certi-date">
-              <span>19 April 2018</span>
-            </div>
-            <div class="certi-company">
-              <span></span>
+              <span>Game services, Landings, Mechanics, Multipages, CRM</span>
             </div>
           </div>
         </div>
@@ -204,20 +329,74 @@
       <div class="col-xs-12 col-sm-6">
         <div class="certificate-item clearfix">
           <div class="certi-logo">
-            <img src="@img/clients/client-1.png" alt="logo">
+            <img src="@img/branding/yandex.png" alt="Yandex">
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Psyhology of Intertnation Design</h4>
+              <h4>Yandex</h4>
             </div>
             <div class="certi-id">
-              <span>Membership ID: XXXX</span>
+              <span>Quizes, Landings, Widgets, CRM Marketing</span>
             </div>
-            <div class="certi-date">
-              <span>19 April 2018</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="certificate-item clearfix">
+          <div class="certi-logo">
+            <img src="@img/branding/pg.png" alt="PG">
+          </div>
+          <div class="certi-content">
+            <div class="certi-title">
+              <h4>Procter & Gamble</h4>
             </div>
-            <div class="certi-company">
-              <span></span>
+            <div class="certi-id">
+              <span>Web applications, Web games, Multipages, CRM</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="certificate-item clearfix">
+          <div class="certi-logo">
+            <img src="@img/branding/alfa.png" alt="Alfa">
+          </div>
+          <div class="certi-content">
+            <div class="certi-title">
+              <h4>Alfa</h4>
+            </div>
+            <div class="certi-id">
+              <span>Web services, Web applications, Multipages</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="certificate-item clearfix">
+          <div class="certi-logo">
+            <img src="@img/branding/samolet.svg" alt="Samolet">
+          </div>
+          <div class="certi-content">
+            <div class="certi-title">
+              <h4>Samolet</h4>
+            </div>
+            <div class="certi-id">
+              <span>CMS, Widgets, Web services, CRM, Email marketing</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="certificate-item clearfix">
+          <div class="certi-logo">
+            <img src="@img/branding/perik.png" alt="Perekrestok">
+          </div>
+          <div class="certi-content">
+            <div class="certi-title">
+              <h4>Perekrestok</h4>
+            </div>
+            <div class="certi-id">
+              <span>Email marketing, Landings, Web services, CMS</span>
             </div>
           </div>
         </div>
