--- a/src/pages/portfolio/portfolio-1.hbs
+++ b/src/pages/portfolio/portfolio-1.hbs
@@ -16,13 +16,13 @@
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
-            <img src="@img/portfolio/1.jpg" alt="" />
+            <img src="" alt="" />
           </div>
           <div class="item">
-            <img src="@img/portfolio/2.jpg" alt="" />
+            <img src="" alt="" />
           </div>
           <div class="item">
-            <img src="@img/portfolio/3.jpg" alt="" />
+            <img src="" alt="" />
           </div>
         </div>
         <script type="text/javascript">
