added detailed project in protfolio screen

--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -35,6 +35,10 @@
           <div class="portfolio-grid three-columns">
             {{>../portfolio/viewer title='IQOS' category='Landings' groups='["category_all", "category_landings"]'
             imgSrc='@img/portfolio/portfolio-iqos.jpg'}}
+
+            {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all", "category_shops"]'
+            imgSrc='@img/portfolio/portfolio-iqos.jpg' hrefLink="portfolio-1.html"}}
+
           </div>
         </div>
       </div>
