--- a/src/views/portfolio/detailed.hbs
+++ b/src/views/portfolio/detailed.hbs
@@ -1,9 +1,9 @@
-<figure class="item standard" data-groups='["category_all", "category_detailed"]'>
+<figure class="item standard" data-groups='{{groups}}'>
   <div class="portfolio-item-img">
-    <img src="" alt="Media Project 2" title="">
-    <a href="portfolio-1.html" class="ajax-page-load"></a>
+    <img src={{imgSrc}} alt={{title}} title={{title}}>
+    <a href={{hrefLink}} class="ajax-page-load"></a>
   </div>
   <i class="far fa-file-alt"></i>
-  <h4 class="name">Detailed Project 2</h4>
-  <span class="category">Detailed</span>
+  <h4 class="name">{{title}}</h4>
+  <span class="category">{{category}}</span>
 </figure>
