fxd adaptive works

--- a/src/pages/portfolio/portfolio-yandex-quiz.hbs
+++ b/src/pages/portfolio/portfolio-yandex-quiz.hbs
@@ -2,20 +2,21 @@
   <div class="ajax-page-wrapper">
     <div class="ajax-page-nav">
       <div class="nav-item ajax-page-prev-next">
-        <a class="ajax-page-load" href="portfolio-3.html"><i class="lnr lnr-chevron-left"></i></a>
-        <a class="ajax-page-load" href="portfolio-2.html"><i class="lnr lnr-chevron-right"></i></a>
+        <a class="ajax-page-load" href="#"><i class="lnr lnr-chevron-left"></i></a>
+        <a class="ajax-page-load" href="#"><i class="lnr lnr-chevron-right"></i></a>
       </div>
       <div class="nav-item ajax-page-close-button">
         <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
       </div>
     </div>
     <div class="ajax-page-title">
-      <h1>Portfolio Project 3</h1>
+      <h1>Yandex</h1>
     </div>
     <div class="row">
       <div class="col-sm-8 col-md-8 portfolio-block">
         <div class="owl-carousel portfolio-page-carousel">
           <div class="item">
+            {{!-- Detailed Slider --}}
             <img src="" alt="" />
           </div>
           <div class="item">
@@ -56,26 +57,26 @@
               <p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p>
             </li>
             <li>
-              <p><i class="fa fa-calendar"></i> 25 december, 2016</p>
+              <p><i class="fa fa-calendar"></i> 12 aug, 2022</p>
             </li>
           </ul>
-          <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada
-            fames ac ante ipsum primis in faucibus.</p>
           <div class="tags-block">
             <div class="block-title">
               <h3>Technology</h3>
             </div>
             <ul class="tags">
-              <li><a>HTML5</a></li>
-              <li><a>CSS3</a></li>
-              <li><a>jQuery</a></li>
-              <li><a>Ajax</a></li>
-              <li><a>PHP5</a></li>
+              <li><a>Web service</a></li>
+              <li><a>CRM</a></li>
+              <li><a>HTML</a></li>
+              <li><a>CSS</a></li>
+              <li><a>JS</a></li>
+              <li><a>Webpack</a></li>
+              <li><a>CMS</a></li>
             </ul>
           </div>
           <div class="btn-group share-buttons">
             <div class="block-title">
-              <h3>Share</h3>
+              <h3>Social</h3>
             </div>
             {{>../../views/templates/social-link}}
           </div>
