--- a/src/views/portfolio/detailed.hbs
+++ b/src/views/portfolio/detailed.hbs
@@ -1,6 +1,6 @@
 <figure class="item standard" data-groups='{{groups}}'>
   <div class="portfolio-item-img">
-    <img src={{imgSrc}} alt={{title}} title={{title}}>
+    <img src={{imgSrc}} alt={{title}} title={{title}} class="portfolio-picture">
     <a href={{hrefLink}} class="ajax-page-load"></a>
   </div>
   <i class="far fa-file-alt"></i>
