--- a/src/styles/partials/_knowledges.scss
+++ b/src/styles/partials/_knowledges.scss
@@ -99,6 +99,7 @@
 }
 
 .portfolio-item-img {
+  object-fit: cover;
   position: relative;
   overflow: hidden;
 }
@@ -192,4 +193,36 @@ button.mfp-close:hover {
 
 button.mfp-close:active {
   border: none;
+}
+
+.portfolio-picture {
+  @media (min-width: 2500px) {
+    max-height: auto;
+    min-height: auto;
+  }
+
+  @media (max-width: 2500px) {
+    max-height: 300px;
+    min-height: 300px;
+  }
+
+  @media (max-width: 1820px) {
+    max-height: 200px;
+    min-height: 200px;
+  }
+
+  @media (max-width: 1440px) {
+    max-height: 150px;
+    min-height: 150px;
+  }
+
+  @media (max-width: 1024px) {
+    max-height: 200px;
+    min-height: 200px;
+  }
+
+  @media (max-width: 768px) {
+    max-height: auto;
+    min-height: auto;
+  }
 }
