added new works in portfolio screen

--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -46,6 +46,54 @@
             {{>../portfolio/detailed title='Yandex' category='Web Service' groups='["category_all",
             "category_service"]'
             imgSrc='@img/portfolio/portfolio-yandex-quiz.jpg' hrefLink="portfolio-yandex-quiz.html"}}
+
+            {{>../portfolio/detailed title='Avito' category='Web Application' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-avitoparser.jpg' hrefLink="portfolio-avitoparser.html"}}
+
+            {{>../portfolio/detailed title='Vlad Kadoni' category='Multilandings' groups='["category_all",
+            "category_multilandings"]'
+            imgSrc='@img/portfolio/portfolio-vladkadoni.jpg' hrefLink="portfolio-vladkadoni.html"}}
+
+            {{>../portfolio/detailed title='Yandex' category='Landings' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-yandex-brth.jpg' hrefLink="portfolio-yandex-brth.html"}}
+
+            {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-iqos-experince.jpg' hrefLink="portfolio-iqos-experince.html"}}
+
+            {{>../portfolio/detailed title='Alfa' category='Landings' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-alfa-investing.jpg' hrefLink="portfolio-alfa-investing.html"}}
+
+            {{>../portfolio/detailed title='Avtoraketa' category='Multilanding' groups='["category_all",
+            "category_multilandings"]'
+            imgSrc='@img/portfolio/portfolio-avtoraketa.jpg' hrefLink="portfolio-avtoraketa.html"}}
+
+            {{>../portfolio/detailed title='IQOS' category='Web Application' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-iqos-sticks.jpg' hrefLink="portfolio-iqos-sticks.html"}}
+
+            {{>../portfolio/detailed title='Atlas' category='CMS' groups='["category_all",
+            "category_cms"]'
+            imgSrc='@img/portfolio/portfolio-atlas.jpg' hrefLink="portfolio-atlas.html"}}
+
+            {{>../portfolio/detailed title='Kinopoisk' category='Web Application' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-kinopoisk.jpg' hrefLink="portfolio-kinopoisk.html"}}
+
+            {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-iqos-choice.jpg' hrefLink="portfolio-iqos-choice.html"}}
+
+            {{>../portfolio/detailed title='PG Bonus' category='Internet Shop' groups='["category_all",
+            "category_shops"]'
+            imgSrc='@img/portfolio/portfolio-pgbonus.jpg' hrefLink="portfolio-pgbonus.html"}}
+
+            {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-iqos-fiit.jpg' hrefLink="portfolio-iqos-fiit.html"}}
           </div>
         </div>
       </div>
