--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -94,6 +94,31 @@
             {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
             "category_landings"]'
             imgSrc='@img/portfolio/portfolio-iqos-fiit.jpg' hrefLink="portfolio-iqos-fiit.html"}}
+
+            {{>../portfolio/detailed title='White Bit' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-whitebit.jpg' hrefLink="portfolio-whitebit.html"}}
+
+            {{>../portfolio/detailed title='Lady Morgana' category='Multiland' groups='["category_all",
+            "category_multilandings"]'
+            imgSrc='@img/portfolio/portfolio-ladymorgana.jpg' hrefLink="portfolio-ladymorgana.html"}}
+
+            {{>../portfolio/detailed title='Portolfio Svetlitskaya' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-svtlitskaya.jpg' hrefLink="portfolio-svtlitskaya.html"}}
+
+            {{>../portfolio/detailed title='Samolet' category='CMS' groups='["category_all",
+            "category_cms", "category_app"]'
+            imgSrc='@img/portfolio/portfolio-samolet.jpg' hrefLink="portfolio-samolet.html"}}
+
+            {{>../portfolio/detailed title='Blanc' category='Web Application' groups='["category_all",
+            "category_app", "category_cms"]'
+            imgSrc='@img/portfolio/portfolio-blanc.jpg' hrefLink="portfolio-blanc.html"}}
+
+            {{>../portfolio/detailed title='Bomber' category='Web Game' groups='["category_all",
+            "category_games"]'
+            imgSrc='@img/portfolio/portfolio-bomber.jpg' hrefLink="portfolio-bomber.html"}}
+
           </div>
         </div>
       </div>
