--- a/src/views/partials/portfolio.hbs
+++ b/src/views/partials/portfolio.hbs
@@ -32,7 +32,7 @@
               <a class="filter btn btn-sm btn-link" data-group="category_games">Web Games</a>
             </li>
             <li>
-              <a class="filter btn btn-sm btn-link" data-group="category_email">Email marketing</a>
+              <a class="filter btn btn-sm btn-link" data-group="category_email">Email Marketing</a>
             </li>
           </ul>
           <div class="portfolio-grid three-columns">
@@ -59,6 +59,18 @@
             "category_landings"]'
             imgSrc='@img/portfolio/portfolio-yandex-brth.jpg' hrefLink="portfolio-yandex-brth.html"}}
 
+            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-email-iqos-lil.jpg'}}
+
+            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-email-iqos-diff.jpg'}}
+
+            {{>../portfolio/viewer title='IQOS' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-email-iqos-delish.jpg'}}
+
             {{>../portfolio/detailed title='IQOS' category='Landings' groups='["category_all",
             "category_landings"]'
             imgSrc='@img/portfolio/portfolio-iqos-experince.jpg' hrefLink="portfolio-iqos-experince.html"}}
@@ -82,6 +94,18 @@
             {{>../portfolio/detailed title='Kinopoisk' category='Web Application' groups='["category_all",
             "category_app"]'
             imgSrc='@img/portfolio/portfolio-kinopoisk.jpg' hrefLink="portfolio-kinopoisk.html"}}
+
+            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-email-yandex-love.jpg'}}
+
+            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-email-yandex-hellowen.jpg'}}
+
+            {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-email-yandex-succ.jpg'}}
 
             {{>../portfolio/detailed title='IQOS' category='Landing' groups='["category_all",
             "category_landings"]'
@@ -107,6 +131,18 @@
             "category_landings"]'
             imgSrc='@img/portfolio/portfolio-svtlitskaya.jpg' hrefLink="portfolio-svtlitskaya.html"}}
 
+            {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-digest.jpg'}}
+
+            {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-hello.jpg'}}
+
+            {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
+            "category_email"]'
+            imgSrc='@img/portfolio/portfolio-vtb-actual.jpg'}}
+
             {{>../portfolio/detailed title='Samolet' category='CMS' groups='["category_all",
             "category_cms", "category_app"]'
             imgSrc='@img/portfolio/portfolio-samolet.jpg' hrefLink="portfolio-samolet.html"}}
@@ -118,6 +154,18 @@
             {{>../portfolio/detailed title='Bomber' category='Web Game' groups='["category_all",
             "category_games"]'
             imgSrc='@img/portfolio/portfolio-bomber.jpg' hrefLink="portfolio-bomber.html"}}
+
+            {{>../portfolio/detailed title='CodX' category='Landing' groups='["category_all",
+            "category_landings"]'
+            imgSrc='@img/portfolio/portfolio-codx.jpg' hrefLink="portfolio-codx.html"}}
+
+            {{>../portfolio/detailed title='Weather Application' category='Web Applications' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-weather-app.jpg' hrefLink="portfolio-weather-app.html"}}
+
+            {{>../portfolio/detailed title='Jobx' category='Web Application' groups='["category_all",
+            "category_app"]'
+            imgSrc='@img/portfolio/portfolio-jobx.jpg' hrefLink="portfolio-jobx.html"}}
 
           </div>
         </div>
