--- a/src/views/portfolio/viewer.hbs
+++ b/src/views/portfolio/viewer.hbs
@@ -1,6 +1,6 @@
 <figure class="item lbimage" data-groups='{{groups}}'>
   <div class="portfolio-item-img">
-    <img src={{imgSrc}} alt={{title}} title="">
+    <img src={{imgSrc}} alt={{title}} title="" class="portfolio-email">
     <a class="lightbox" href={{imgSrc}} title={{title}}></a>
   </div>
   <i class="far fa-image"></i>
